[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slipgate"
version = "0.4.1"
description = "Self-hosted challenge-solving download resolver. Wraps FlareSolverr to slip through Cloudflare-style gates and returns a direct download URL."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "fyiel" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
slipgate = "slipgate.__main__:main"

[project.urls]
Homepage = "https://github.com/fyiel/Slipgate"
Issues = "https://github.com/fyiel/Slipgate/issues"

[tool.hatch.build.targets.wheel]
packages = ["slipgate"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# ASYNC109: our Page/engine methods take an explicit `timeout` by design; they
# wrap browser waits, they are not asyncio primitives.
ignore = ["ASYNC109"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are meant to sit in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
